14-Jan-2012 Issue 55. DynamicLibrary dependency checking no longer compares against the static import library, which is not always written after incremental code updates, so gives false positives about the need to relink.

14-Jan-2012 Native build dependency checking will now output reasons for dependency failures when running with -verbosity=3, rather than just in debug mode.

14-Jan-2012 Add a new property to Opus.Core.IModule, ProxyPath, that allows a module to proxy data on another part of a storage medium. For example, if an AddRelativePaths(this, ...) function is called, 'this' will return the proxied path, not the package directory that the module refers to. The ProxyPath can be relative (to the package directory) or absolute.

13-Jan-2012 QtCommon.MocOptionCollection now implements the QtCommon.IMocOptions interface.

12-Jan-2012 Allow packages to have versions containing dashes.

12-Jan-2012 Qt packages can provide more than one include path.

12-Jan-2012 Gcc, Mingw, Qt, and VisualC packages, when passed an installation directory, now also check these relative to the working directory.

12-Jan-2012 Opus.Core.File.GetFiles threw an exception if the path segments contain '..'. This can still happen (see System.String.Directory.GetFiles on MSDN), but if they occur at the start of the path segments, they can be moved to the base directory.

10-Jan-2012 Opus.Core.File.GetFiles will no longer throw an exception when no files match the pattern used. A detail log message is output instead.

10-Jan-2012 DirectXSDK package will now throw a sensible exception if the SDK is not installed.

09-Jan-2012 VisualStudio projects for C application/dynamic library/static library with no input files are no longer generated.

09-Jan-2012 Native build C link or archive steps no longer throw an exception when there are no input files. A detail message is output, however.

09-Jan-2012 Improved exception message when a package is failed to be located in any package root.
