@@ -1,0 +1,17 @@
+// <copyright file="MocFileCollection.cs" company="Mark Final">
+//  Opus package
+// </copyright>
+// <summary>QtCommon package</summary>
+// <author>Mark Final</author>
+namespace VSSolutionBuilder
+{
+    public sealed partial class VSSolutionBuilder
+    {
+        [Opus.Core.EmptyBuildFunction]
+        public object Build(QtCommon.MocFileCollection mocFileCollection, out bool success)
+        {
+            success = true;
+            return null;
+        }
+    }
+}
